# common_magazine_bot

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml
bot/handlers/: __init__.py  routers.py
bot/handlers/user/: catalog.py  commands.py
bot/keyboards/: __init__.py  catalog.py  main.py
core/: config.py  logger.py  strings.py
database/: database.py
database/migrations/: env.py
database/migrations/versions/: 15379a08f0a4_remove_gender_from_product.py  4720ae5ca5a6_initial_migration.py  ae84a4f38f2b_add_price_field_to_product.py  d6ea0bee5160_add_category_model.py  e0402a753638_initial_migration.py  e14e4cdae288_add_image_url_to_product.py
database/models/: __init__.py  categories.py  category.py  product.py
database/repositories/: __init__.py  base.py  category.py  product.py
